@@ -116,4 +116,6 @@ void EXTI_setPriority(PERIPH_EXTI exti,UTIL_interruptPriority p)
     }
 }
 
+#else
+    #warning Nothing to be done... User should remove .c file which is disabled by compile control macro from current directory.
 #endif
