@@ -178,6 +178,8 @@ bool ISP_writeByte(unsigned int addr,byte dat)
     }
 }
 
+#else
+    #warning Nothing to be done... User should remove .c file which is disabled by compile control macro from current directory.
 #endif
 
 #endif
