@@ -51,4 +51,6 @@ void MEM_cmd_internalExtendedRam(Action a)
     CONFB(AUXR,BIT_NUM_EXTRAM,(~a));
 }
 
+#else
+    #warning Nothing to be done... User should remove .c file which is disabled by compile control macro from current directory.
 #endif
