@@ -79,4 +79,6 @@ void sleep(unsigned int t)
     #endif
 }
 
+#else
+    #warning Nothing to be done... User should remove .c file which is disabled by compile control macro from current directory.
 #endif
